# oner

./: Cargo.toml  README.md
data/cc/: biopsy.csv
data/fake-house/: README.md  house.csv
data/ir/: iris.csv
script/: README.md  many.sh
src/: config.rs  dataset.rs  interval.rs  iter.rs  main.rs  oner.rs  print.rs  quant.rs  quantize.rs
