[package]
name = "oner"
version = "0.2.0"
authors = ["Richard Dallaway <richard@dallaway.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
ndarray = "0.13"
csv = "1"
ndarray-csv = "0.4"
rand = "0.7"
structopt = "0.3"

oner_induction = "0.2"
# oner_induction = { git = "https://github.com/d6y/oner_induction", branch = "master" }
# oner_induction = { path = "../oner_induction" }
